--- a/checkout.html
+++ b/checkout.html
@@ -25,32 +25,26 @@
       max-width: 400px;
       width: 90%;
       box-shadow: 0 0 10px rgba(0,0,0,0.25);
-      text-align: left;
-    }
-    .popup-content hr {
-      margin: 15px 0;
-    }
-    .popup-content p {
-      margin: 6px 0;
     }
     .btn-comprar {
-      display: inline-block;
       background: #ffe600;
-      color: #333;
       padding: 10px 16px;
-      border-radius: 4px;
-      text-decoration: none;
-      font-weight: bold;
-      margin-top: 15px;
-      cursor: pointer;
-    }
-    #fecharPopup {
-      background: #ccc;
       border: none;
-      padding: 8px 12px;
       border-radius: 4px;
       cursor: pointer;
-      margin-right: 10px;
+      font-weight: bold;
+      text-decoration: none;
+      display: inline-block;
+      margin-top: 10px;
+    }
+    .erro-campo {
+      border: 1px solid red;
+    }
+    .mensagem-erro {
+      color: red;
+      font-size: 0.9em;
+      display: none;
+      margin-top: 4px;
     }
   </style>
 </head>
@@ -70,35 +64,47 @@
 
       <label for="cpf">CPF:</label>
       <input type="text" id="cpf" required maxlength="14" placeholder="000.000.000-00" />
+      <span id="cpfErro" class="mensagem-erro">CPF inválido.</span>
 
       <label for="email">E-mail:</label>
       <input type="email" id="email" required />
+      <span id="emailErro" class="mensagem-erro">E-mail inválido.</span>
 
       <label for="telefone">Telefone:</label>
       <input type="tel" id="telefone" required placeholder="(00) 00000-0000" />
+      <span id="telefoneErro" class="mensagem-erro">Telefone inválido.</span>
 
       <button type="submit">Confirmar dados</button>
     </form>
   </main>
 
-  <div id="popup" class="popup hidden" role="dialog" aria-modal="true" aria-labelledby="popupTitle">
+  <div id="popup" class="popup hidden">
     <div class="popup-content">
-      <h3 id="popupTitle">Confira seus dados</h3>
+      <h3>Confira seus dados</h3>
       <div id="dados-confirmacao"></div>
-      <button id="fecharPopup" type="button">Corrigir</button>
+      <button id="fecharPopup">Corrigir</button>
       <a href="pix.html" class="btn-comprar">Ir para pagamento</a>
     </div>
   </div>
 
   <script>
+    const cpfInput = document.getElementById("cpf");
+    const cpfErro = document.getElementById("cpfErro");
+    const emailInput = document.getElementById("email");
+    const emailErro = document.getElementById("emailErro");
+    const telInput = document.getElementById("telefone");
+    const telErro = document.getElementById("telefoneErro");
+
     function validarCPF(cpf) {
       cpf = cpf.replace(/[^\d]+/g, '');
       if (cpf.length !== 11 || /^(\d)\1{10}$/.test(cpf)) return false;
+
       let soma = 0;
       for (let i = 0; i < 9; i++) soma += parseInt(cpf.charAt(i)) * (10 - i);
       let resto = (soma * 10) % 11;
       if (resto === 10 || resto === 11) resto = 0;
       if (resto !== parseInt(cpf.charAt(9))) return false;
+
       soma = 0;
       for (let i = 0; i < 10; i++) soma += parseInt(cpf.charAt(i)) * (11 - i);
       resto = (soma * 10) % 11;
@@ -106,41 +112,20 @@
       return resto === parseInt(cpf.charAt(10));
     }
 
-    function getEnderecoLocalStorage() {
-      return {
-        cep: localStorage.getItem("cep") || "",
-        cidade: localStorage.getItem("cidade") || "",
-        estado: localStorage.getItem("estado") || "",
-        rua: localStorage.getItem("rua") || "",
-        numero: localStorage.getItem("numero") || "",
-        bairro: localStorage.getItem("bairro") || "",
-        complemento: localStorage.getItem("complemento") || ""
-      };
+    function validarEmail(email) {
+      return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
     }
 
-    function preencherPopup(dados) {
-      const popup = document.getElementById("popup");
-      const confirmacao = document.getElementById("dados-confirmacao");
-      confirmacao.innerHTML = `
-        <p><strong>Nome:</strong> ${dados.nome}</p>
-        <p><strong>E-mail:</strong> ${dados.email}</p>
-        <p><strong>CPF:</strong> ${dados.cpf}</p>
-        <p><strong>Telefone:</strong> ${dados.telefone}</p>
-        <hr>
-        <p><strong>Endereço:</strong></p>
-        <p>${dados.rua}, ${dados.numero}</p>
-        <p>${dados.bairro} - ${dados.cidade}/${dados.estado}</p>
-        <p>CEP: ${dados.cep}</p>
-        <p>${dados.complemento || ""}</p>
-      `;
-      popup.classList.remove("hidden");
+    function validarTelefone(tel) {
+      const cleaned = tel.replace(/\D/g, '');
+      return cleaned.length === 11;
     }
 
     function formatarCPF(value) {
       return value.replace(/\D/g, '')
-                  .replace(/(\d{3})(\d)/, '$1.$2')
-                  .replace(/(\d{3})(\d)/, '$1.$2')
-                  .replace(/(\d{3})(\d{1,2})$/, '$1-$2');
+        .replace(/(\d{3})(\d)/, '$1.$2')
+        .replace(/(\d{3})(\d)/, '$1.$2')
+        .replace(/(\d{3})(\d{1,2})$/, '$1-$2');
     }
 
     function formatarTelefone(value) {
@@ -158,41 +143,95 @@
       return value;
     }
 
-    document.getElementById("cpf").addEventListener("input", e => {
+    cpfInput.addEventListener("input", e => {
       e.target.value = formatarCPF(e.target.value);
     });
 
-    document.getElementById("telefone").addEventListener("input", e => {
+    telInput.addEventListener("input", e => {
       e.target.value = formatarTelefone(e.target.value);
     });
 
-    document.getElementById("checkoutForm").addEventListener("submit", function (e) {
+    cpfInput.addEventListener("blur", () => {
+      const valido = validarCPF(cpfInput.value.trim());
+      cpfErro.style.display = valido ? "none" : "block";
+      cpfInput.classList.toggle("erro-campo", !valido);
+    });
+
+    emailInput.addEventListener("blur", () => {
+      const valido = validarEmail(emailInput.value.trim());
+      emailErro.style.display = valido ? "none" : "block";
+      emailInput.classList.toggle("erro-campo", !valido);
+    });
+
+    telInput.addEventListener("blur", () => {
+      const valido = validarTelefone(telInput.value.trim());
+      telErro.style.display = valido ? "none" : "block";
+      telInput.classList.toggle("erro-campo", !valido);
+    });
+
+    function getEnderecoLocalStorage() {
+      return {
+        cep: localStorage.getItem("cep") || "",
+        cidade: localStorage.getItem("cidade") || "",
+        estado: localStorage.getItem("estado") || "",
+        rua: localStorage.getItem("rua") || "",
+        numero: localStorage.getItem("numero") || "",
+        bairro: localStorage.getItem("bairro") || "",
+        complemento: localStorage.getItem("complemento") || ""
+      };
+    }
+
+    function preencherPopup(dados) {
+      const confirmacao = document.getElementById("dados-confirmacao");
+      confirmacao.innerHTML = `
+        <p><strong>Nome:</strong> ${dados.nome}</p>
+        <p><strong>CPF:</strong> ${dados.cpf}</p>
+        <p><strong>Email:</strong> ${dados.email}</p>
+        <p><strong>Telefone:</strong> ${dados.telefone}</p>
+        <hr>
+        <p><strong>Endereço:</strong></p>
+        <p>${dados.rua}, ${dados.numero}</p>
+        <p>${dados.bairro} - ${dados.cidade}/${dados.estado}</p>
+        <p>CEP: ${dados.cep}</p>
+        <p>${dados.complemento || ""}</p>
+      `;
+      document.getElementById("popup").classList.remove("hidden");
+    }
+
+    document.getElementById("checkoutForm").addEventListener("submit", e => {
       e.preventDefault();
+
       const nome = document.getElementById("nome").value.trim();
-      const email = document.getElementById("email").value.trim();
-      const cpf = document.getElementById("cpf").value.trim();
-      const telefone = document.getElementById("telefone").value.trim();
+      const cpf = cpfInput.value.trim();
+      const email = emailInput.value.trim();
+      const telefone = telInput.value.trim();
       const endereco = getEnderecoLocalStorage();
 
-      if (!validarCPF(cpf)) {
-        alert("CPF inválido. Por favor, verifique e tente novamente.");
-        return;
-      }
+      const cpfOk = validarCPF(cpf);
+      const emailOk = validarEmail(email);
+      const telOk = validarTelefone(telefone);
+
+      cpfErro.style.display = cpfOk ? "none" : "block";
+      emailErro.style.display = emailOk ? "none" : "block";
+      telErro.style.display = telOk ? "none" : "block";
+
+      cpfInput.classList.toggle("erro-campo", !cpfOk);
+      emailInput.classList.toggle("erro-campo", !emailOk);
+      telInput.classList.toggle("erro-campo", !telOk);
+
+      if (!cpfOk || !emailOk || !telOk) return;
 
       if (!endereco.cep || !endereco.rua || !endereco.numero || !endereco.bairro || !endereco.cidade || !endereco.estado) {
-        localStorage.setItem("nome", nome);
-        localStorage.setItem("email", email);
-        localStorage.setItem("cpf", cpf);
-        localStorage.setItem("telefone", telefone);
         window.location.href = "cep.html?from=checkout";
         return;
       }
 
       localStorage.setItem("nome", nome);
-      localStorage.setItem("email", email);
       localStorage.setItem("cpf", cpf);
+      localStorage.setItem("email", email);
       localStorage.setItem("telefone", telefone);
-      preencherPopup({ nome, email, cpf, telefone, ...endereco });
+
+      preencherPopup({ nome, cpf, email, telefone, ...endereco });
     });
 
     document.getElementById("fecharPopup").addEventListener("click", () => {
@@ -201,19 +240,19 @@
 
     window.addEventListener("load", () => {
       document.getElementById("nome").value = localStorage.getItem("nome") || "";
-      document.getElementById("email").value = localStorage.getItem("email") || "";
-      document.getElementById("cpf").value = localStorage.getItem("cpf") || "";
-      document.getElementById("telefone").value = localStorage.getItem("telefone") || "";
+      cpfInput.value = localStorage.getItem("cpf") || "";
+      emailInput.value = localStorage.getItem("email") || "";
+      telInput.value = localStorage.getItem("telefone") || "";
 
-      const params = new URLSearchParams(window.location.search);
-      if (params.get("pop") === "true") {
+      if (new URLSearchParams(window.location.search).get("pop") === "true") {
         const nome = localStorage.getItem("nome") || "";
-        const email = localStorage.getItem("email") || "";
         const cpf = localStorage.getItem("cpf") || "";
+        const email = localStorage.getItem("email") || "";
         const telefone = localStorage.getItem("telefone") || "";
         const endereco = getEnderecoLocalStorage();
-        if (nome && email && cpf && telefone) {
-          preencherPopup({ nome, email, cpf, telefone, ...endereco });
+
+        if (nome && cpf && email && telefone) {
+          preencherPopup({ nome, cpf, email, telefone, ...endereco });
         }
       }
     });
